--- a/templates/app_mobile/homepage.html
+++ b/templates/app_mobile/homepage.html
@@ -118,6 +118,7 @@
                 </div>
             </div>
         </div>
+        {% include 'include/time_calculator.html' %}
         <div class="row justify-content-center my-5">
             <hr class="text-apple text-center">
         </div>
