--- a/static/css/mobile_header.css
+++ b/static/css/mobile_header.css
@@ -129,6 +129,7 @@ label ul {
     visibility: hidden;
     -webkit-transition: .25s 0s ease-in-out;
     transition: .25s 0s ease-in-out;
+    transition-delay: .1s;
 }
 
 label a {
